Don't use deprecated Java URL constructors
- These are deprecated in Java 20
- See https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/net/URL.html#constructor-deprecation
- Use URI.toURL()
- Fix HTML report URL not opening Windows network paths on Firefox